<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?colorSecondaryVariant"
    tools:context=".MainActivity"
    android:padding="10dp">

    <Button
        android:id="@+id/btnIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainBtnIngredients" />

    <Button
        android:id="@+id/btnMeals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainBtnMeals" />

    <Button
        android:id="@+id/btnCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainBtnCalendar" />

    <ImageView
        android:id="@+id/btnCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:foreground="?attr/selectableItemBackground"
        app:srcCompat="@drawable/icon_add"
        android:scaleType="center"

        app:tint="@color/MediumMain" />


</LinearLayout>